composer require drupal/next

--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "cweagans/composer-patches": "^1.7",
         "drupal/core-composer-scaffold": "^9.3",
         "drupal/core-project-message": "^9.3",
-        "drupal/core-recommended": "^9.3"
+        "drupal/core-recommended": "^9.3",
+        "drupal/next": "^1.2"
     },
     "conflict": {
         "drupal/drupal": "*"
