disable TLS verification

--- a/drupal-nextjs/.env.example
+++ b/drupal-nextjs/.env.example
@@ -12,3 +12,6 @@ DRUPAL_CLIENT_SECRET=
 # Authentication (Basic)
 DRUPAL_USERNAME=
 DRUPAL_PASSWORD=
+
+# Disable TLS verification
+NODE_TLS_REJECT_UNAUTHORIZED=0
